force-app/main/default/objects/ucinn_ascendv2__Manage_Household_Setting__mdt/ucinn_ascendv2__Manage_Household_Setting__mdt.object-meta.xml
<CustomObject>
    <description>For configuring the manage household component.</description>
    <label>Manage Household Setting</label>
    <pluralLabel>Manage Household Settings</pluralLabel>
</CustomObject>