force-app/main/default/objects/ucinn_ascendv2__Manage_Household_Setting__mdt/fields/ucinn_ascendv2__Disable_Soft_Credit_Checkboxes__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Disable_Soft_Credit_Checkboxes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For disabling all check boxes related to soft credit on the manage household component.</description>
    <inlineHelpText>For disabling all check boxes related to soft credit on the manage household component.</inlineHelpText>
    <label>Disable Soft Credit Checkboxes</label>
    <type>Checkbox</type>
</CustomField>