force-app/main/default/objects/ucinn_ascendv2__Manage_Household_Setting__mdt/fields/ucinn_ascendv2__Relationship_Contact_Role_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Relationship_Contact_Role_API_Name__c</fullName>
    <description>Relationship Contact Role API Name when not using ascend Relationship.</description>
    <inlineHelpText>Relationship Contact Role API Name when not using ascend Relationship.</inlineHelpText>
    <label>Relationship Contact Role API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>