force-app/main/default/objects/ucinn_ascendv2__Manage_Household_Setting__mdt/fields/ucinn_ascendv2__Relationship_Related_Contact_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Relationship_Related_Contact_API_Name__c</fullName>
    <description>Related Contact API Name when not using ascend Relationship</description>
    <inlineHelpText>Related Contact API Name when not using ascend Relationship</inlineHelpText>
    <label>Relationship Related Contact API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>